Add Ballerina version filtering for Central package resolution